# summarization_srt

./: Dockerfile  README.md  example.env  pyproject.toml
prompts/: summarize.yaml
src/: configs.py  dto.py  main.py  routes.py  utils.py
tests/: test_routes.py  test_summarize.py
